--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.79.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.6.1",
